# omni-resume

./: README.md  build_binary.py  entry_point.py  pyproject.toml
src/fast_resume/: __init__.py  cli.py  config.py  logging_config.py  search.py
src/fast_resume/adapters/: __init__.py  antigravity.py  hermes.py
src/fast_resume/tui/: __init__.py  app.py
tests/: test_antigravity_adapter.py  test_hermes_adapter.py
